# adventofcode

./: pyproject.toml
2022/: day 1 part 2.py  day 2 part 1.py  day 2 part 2.py  day 3 part 1.py  day 3 part 2.py  day 4 part 1.py  day 4 part 2.py  day 5 part 1.py  day 5 part 2.py  day 6 part 1.py  day 6 part 2.py  day1.py
2022/day 7/: day 7 part 1.py  directory.py  file.py
